# cs229-project

./: .gitignore  README.md  classification_metrics.py  create_labeled_dataset.py  label_webcams.py  list_metadata.py  scrape_frames.py  scrape_metadata.py  show_filtered_webcams.py  show_webcams.py  vocabulary.yml.bak  xaa
analysis/: COMPLETE  clean.sh  mkdirs.sh  vis.sh
classify/: classifier.py  imagenet  models
cluster/: CMakeLists.txt  notes.txt
cluster/src/: .complete.cc.swp  .descriptor_extractor.h.swp  .extract_descriptors.cc.swp  .extract_descriptors.h.swp  .frames_manager.cc.swp  :299  CMakeLists.txt  cache.cc  cache.h  cluster.cc  complete.cc  compute_features.cc  descriptor_extractor.cc  descriptor_extractor.h  extract_descriptors.cc  frames_manager.cc  frames_manager.h  generate_vocabulary.cc  random_selector.h  sift.cc  types.h  visualize.cc
detector/: Webcam.py  WebcamExample.py
finalpaper/: Final.aux  Final.out  Final.tex  nips14submit_e.sty  nips2014.aux
metadata/: abstract_webcam_metadata_scraper.py  opentopia_webcam_metadata_scraper.py  test.py  webcam_metadata.py  webcam_metadata_manager.py
milestone/: .Milestone.tex.swp  Milestone.aux  Milestone.fdb_latexmk  Milestone.fls  Milestone.tex
notes/: opentopia.txt
webcam/: frames  test.py  webcam.py
webcam/metadata/: manager.py  metadata.p  test.py
webcam/metadata/scraper/: abstract.py  metadata.py  opentopia.py
