PROJECT (CLUSTER)

ADD_LIBRARY(CORE_LIB
  descriptor_extractor.cc
  frames_manager.cc
)

ADD_EXECUTABLE(SIFT sift.cc)
TARGET_LINK_LIBRARIES(SIFT ${OpenCV_LIBS})

ADD_EXECUTABLE(EXTRACT_DESCRIPTORS extract_descriptors.cc)
TARGET_LINK_LIBRARIES(EXTRACT_DESCRIPTORS
  CORE_LIB
  ${OpenCV_LIBS}
  ${Boost_LIBRARIES}
)
