PROJECT (CLUSTER)

ADD_LIBRARY(CORE_LIB
  descriptor_extractor.cc
  frames_manager.cc
)

ADD_EXECUTABLE(SIFT sift.cc)
TARGET_LINK_LIBRARIES(SIFT ${OpenCV_LIBS})

ADD_EXECUTABLE(EXTRACT_DESCRIPTORS extract_descriptors.cc)
TARGET_LINK_LIBRARIES(EXTRACT_DESCRIPTORS
  CORE_LIB
  ${OpenCV_LIBS}
  ${Boost_LIBRARIES}
)

ADD_EXECUTABLE(VISUALIZE visualize.cc)
TARGET_LINK_LIBRARIES(VISUALIZE
  CORE_LIB
  ${OpenCV_LIBS}
  ${Boost_LIBRARIES}
)

ADD_EXECUTABLE(GENERATE_VOCABULARY generate_vocabulary.cc)
TARGET_LINK_LIBRARIES(GENERATE_VOCABULARY
  CORE_LIB
  ${OpenCV_LIBS}
  ${Boost_LIBRARIES}
)

ADD_EXECUTABLE(COMPUTE_FEATURES  compute_features.cc)
TARGET_LINK_LIBRARIES(COMPUTE_FEATURES
  CORE_LIB
  ${OpenCV_LIBS}
  ${Boost_LIBRARIES}
)

ADD_EXECUTABLE(CLUSTER cluster.cc)
TARGET_LINK_LIBRARIES(CLUSTER
  CORE_LIB
  ${OpenCV_LIBS}
  ${Boost_LIBRARIES}
)

ADD_EXECUTABLE(COMPLETE complete.cc)
TARGET_LINK_LIBRARIES(COMPLETE
  CORE_LIB
  ${OpenCV_LIBS}
  ${Boost_LIBRARIES}
)
