PROJECT (CLUSTER)


ADD_LIBRARY(CORE_LIB
  descriptor_extractor.cc
  frames_manager.cc
  cache.cc
)


ADD_EXECUTABLE(VISUALIZE visualize.cc)
TARGET_LINK_LIBRARIES(VISUALIZE
  CORE_LIB
  ${OpenCV_LIBS}
  ${Boost_LIBRARIES}
)


ADD_EXECUTABLE(COMPLETE complete.cc)
TARGET_LINK_LIBRARIES(COMPLETE
  CORE_LIB
  ${OpenCV_LIBS}
  ${Boost_LIBRARIES}
)
